vlib/v/checker/tests/duplicate_field_method_err.vv
struct St{
	attr fn()
}

fn (s St) attr() {}

interface Foo {
	bar fn ()
	bar()
}
